<actions> Fix macOS homebrew warning about formulas vs casks

--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -215,7 +215,7 @@ jobs:
         # Update Homebrew
         brew update > brew_update.log || { echo "::error::Updating homebrew failed"; cat brew_update.log; exit 1; }
         # Install needed dependencies
-        brew install automake cmake libtool pkg-config
+        brew install --formula automake cmake libtool pkg-config
 
     - name: Install Qt
       uses: jurplel/install-qt-action@v4
