--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -81,7 +81,7 @@ jobs:
 
     # InnoSetup is currently not included by default, see https://github.com/actions/runner-images/issues/11644
     - name: Install InnoSetup
-      run: dotnet add package Tools.InnoSetup
+      run: choco install innosetup
 
     - name: Install dependencies
       uses: ./.github/actions/setup-windows
