<actions> Install gnu sed and gnu make via homebrew

--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -219,7 +219,9 @@ jobs:
         # Update Homebrew
         brew update > brew_update.log || { echo "::error::Updating homebrew failed"; cat brew_update.log; exit 1; }
         # Install needed dependencies
-        brew install --formula automake cmake libtool pkg-config
+        brew install --formula automake cmake gnu-sed libtool make pkg-config
+        echo "$(brew --prefix)/opt/gnu-sed/libexec/gnubin" >> "$GITHUB_PATH"
+        echo "$(brew --prefix)/opt/make/libexec/gnubin" >> "$GITHUB_PATH"
 
     - name: Install Qt
       uses: jurplel/install-qt-action@v4
