--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -222,6 +222,7 @@ jobs:
         brew install --formula automake cmake gnu-sed libtool make pkg-config texinfo
         echo "$(brew --prefix)/opt/gnu-sed/libexec/gnubin" >> "$GITHUB_PATH"
         echo "$(brew --prefix)/opt/make/libexec/gnubin" >> "$GITHUB_PATH"
+        echo "$(brew --prefix)/opt/libtool/libexec/gnubin" >> "$GITHUB_PATH"
 
     - name: Install Qt
       uses: jurplel/install-qt-action@v4
